[updated] Spring version to 2.2.1.RELEASE to prevent consistent Kotlin version (1.3.50) [updated] kotlin-logging to 1.7.6, junit-jupiter to 5.5.2, kotlintest-runner-junit5 to 3.4.2, testcontainers to 1.12.3, akka-management to 1.0.4, akka-discovery-kubernetes-api to 1.0.4 [added] Exclusions to provide the same version of Akka, Kotlin etc. (except scala-library)

--- a/module/cluster/management/kubernetes/configuration/pom.xml
+++ b/module/cluster/management/kubernetes/configuration/pom.xml
@@ -33,6 +33,16 @@
             <groupId>com.github.TanUkkii007</groupId>
             <artifactId>akka-cluster-custom-downing</artifactId>
             <version>${akka-cluster-custom-downing.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.typesafe.akka</groupId>
+                    <artifactId>akka-actor_2.12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.typesafe.akka</groupId>
+                    <artifactId>akka-cluster_2.12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
