--- a/module/connector/activemq/delivery/delivery-message-converter/pom.xml
+++ b/module/connector/activemq/delivery/delivery-message-converter/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
-            <version>${spring.version}</version>
+            <version>${spring-framework.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.jms</groupId>
