--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
     </parent>
 
     <groupId>pl.beone.promena.sdk.maven.parent</groupId>
@@ -48,16 +48,16 @@
         <kotlin.version>1.3.50</kotlin.version>
         <java.version>11</java.version>
 
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
+        <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
 
-        <kotlin-logging.version>1.7.3</kotlin-logging.version>
+        <kotlin-logging.version>1.7.6</kotlin-logging.version>
         <kryo.version>4.0.2</kryo.version>
         <akka.version>2.5.23</akka.version>
         <akka-kryo-serialization.version>0.5.2</akka-kryo-serialization.version>
         <kryo-serializers.version>0.45</kryo-serializers.version>
 
-        <kotlintest-runner-junit5.version>3.4.0</kotlintest-runner-junit5.version>
-        <junit-jupiter.version>5.5.1</junit-jupiter.version>
+        <kotlintest-runner-junit5.version>3.4.2</kotlintest-runner-junit5.version>
+        <junit-jupiter.version>5.5.2</junit-jupiter.version>
         <mockk.version>1.9.3</mockk.version>
     </properties>
 
@@ -102,6 +102,20 @@
                 <groupId>com.github.romix.akka</groupId>
                 <artifactId>akka-kryo-serialization_2.12</artifactId>
                 <version>${akka-kryo-serialization.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.esotericsoftware</groupId>
+                        <artifactId>kryo</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.typesafe.akka</groupId>
+                        <artifactId>akka-remote_2.12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.scala-lang</groupId>
+                        <artifactId>scala-library</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.esotericsoftware</groupId>
@@ -112,6 +126,12 @@
                 <groupId>de.javakaffee</groupId>
                 <artifactId>kryo-serializers</artifactId>
                 <version>${kryo-serializers.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.esotericsoftware</groupId>
+                        <artifactId>kryo</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
