[improved][promena-transformer-archetype] New parameters in order to demonstrate new validation and optionality [improved][promena-transformer-archetype] Parameters "validate" function (parameter value validation) [improved][promena-transformer-archetype] Test - added model Resource, content is read from file

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/configuration/src/main/resources/transformer-__rootArtifactId__.properties
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/configuration/src/main/resources/transformer-__rootArtifactId__.properties
@@ -3,7 +3,9 @@ transformer.${package}.${pascalCaseTransformerId}Transformer.id.sub-name=${trans
 transformer.${package}.${pascalCaseTransformerId}Transformer.priority=1
 transformer.${package}.${pascalCaseTransformerId}Transformer.actors=1
 
-transformer.${package}.settings.example=value
+transformer.${package}.settings.hostname=hostname
+transformer.${package}.settings.port=8080
 
-transformer.${package}.default.parameters.example2=value2
+transformer.${package}.default.parameters.optional=
+transformer.${package}.default.parameters.optional-limited-value=
 transformer.${package}.default.parameters.timeout=
