--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/implementation/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/implementation/pom.xml
@@ -35,6 +35,11 @@
         </dependency>
 
         <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${groupId}</groupId>
             <artifactId>${rootArtifactId}-application-model</artifactId>
             <version>${${rootArtifactId}.version}</version>
