--- a/base/promena-core/configuration/pom.xml
+++ b/base/promena-core/configuration/pom.xml
@@ -43,7 +43,7 @@
             <artifactId>akka-actor_2.12</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.romix.akka</groupId>
+            <groupId>io.altoo</groupId>
             <artifactId>akka-kryo-serialization_2.12</artifactId>
         </dependency>
         <dependency>
