--- a/base/promena-core/configuration/src/main/resources/application-akka.properties
+++ b/base/promena-core/configuration/src/main/resources/application-akka.properties
@@ -1,13 +1,11 @@
 akka.loggers.0=akka.event.slf4j.Slf4jLogger
-
 akka.actor.provider=cluster
-
 akka.actor.allow-java-serialization=off
-enable-additional-serialization-bindings=on
-akka.actor.serializers.java=com.romix.akka.serialization.kryo.KryoSerializer
-akka.actor.kryo.idstrategy=automatic
-akka.actor.kryo.implicit-registration-logging=true
-
+akka.actor.serialization-bindings."java.lang.Object"=java
+akka.actor.serializers.java=io.altoo.akka.serialization.kryo.KryoSerializer
+akka-kryo-serialization.id-strategy=automatic
+akka-kryo-serialization.implicit-registration-logging=true
+akka-kryo-serialization.kryo-initializer=pl.beone.promena.core.configuration.external.akka.framework.serialization.AkkaAdditionalSerializersKryoInitializer
 akka.remote.netty.tcp.hostname=127.0.0.1
 akka.remote.netty.tcp.port=2552
 akka.maximun-payload-size=${core.serializer.kryo.buffer-size}b
@@ -16,10 +14,6 @@ akka.remote.netty.tcp.send-buffer-size=${akka.maximun-payload-size}
 akka.remote.netty.tcp.receive-buffer-size=${akka.maximun-payload-size}
 akka.remote.netty.tcp.maximum-frame-size=${akka.maximun-payload-size}
 akka.remote.maximum-payload-bytes=${akka.maximun-payload-size}
-
-akka.extensions.0=com.romix.akka.serialization.kryo.KryoSerializationExtension$
-
 akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/native
-
 akka.cluster.log-info=on
 akka.cluster.log-info-verbose=on
