--- a/base/promena-core/integration-test/src/test/resources/resource-test.conf
+++ b/base/promena-core/integration-test/src/test/resources/resource-test.conf
@@ -10,10 +10,10 @@ akka.logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 akka.actor.provider=cluster
 
 akka.actor.allow-java-serialization=off
-enable-additional-serialization-bindings=on
-akka.actor.serializers.java=com.romix.akka.serialization.kryo.KryoSerializer
-akka.actor.kryo.idstrategy=automatic
-akka.actor.kryo.implicit-registration-logging=true
+akka.actor.serializers.java=io.altoo.akka.serialization.kryo.KryoSerializer
+akka-kryo-serialization.id-strategy=automatic
+akka-kryo-serialization.implicit-registration-logging=true
+akka-kryo-serialization.kryo-initializer=pl.beone.promena.core.configuration.external.akka.framework.serialization.AkkaAdditionalSerializersKryoInitializer
 akka.actor.serialization-bindings {
   "java.lang.Object" = java
 }
@@ -26,8 +26,6 @@ akka.remote.netty.tcp.send-buffer-size=10485760
 akka.remote.netty.tcp.receive-buffer-size=10485760
 akka.remote.netty.tcp.maximum-frame-size=10485760
 akka.remote.maximum-payload-bytes=10485760
-
-akka.extensions.0="com.romix.akka.serialization.kryo.KryoSerializationExtension$"
 
 akka.cluster.log-info=on
 akka.cluster.log-info-verbose=on
