[refactored][promena-core] "application-promena.properties" name [refactored][promena-core] Added empty lines between sections in application-akka.properties

--- a/base/promena-core/configuration/src/main/resources/application-promena.properties
+++ b/base/promena-core/configuration/src/main/resources/application-promena.properties
@@ -1,5 +1,8 @@
 core.transformation.interruption-timeout-delay=3s
 core.serializer.kryo.buffer-size=104857600
 
+core.transformer.actor.cluster-aware=true
+core.serializer.actor.cluster-aware=false
+
 communication.external.manager.back-pressure.enabled=true
 communication.external.manager.back-pressure.id=memory
