[added][promena-core] Default timeout - property "core.transformation.timeout" [improved][promena-core] Treated AskTimeoutException as TransformationTerminationException

--- a/base/promena-core/configuration/src/main/resources/application-promena.properties
+++ b/base/promena-core/configuration/src/main/resources/application-promena.properties
@@ -1,4 +1,5 @@
-core.transformation.interruption-timeout-delay=3s
+core.transformation.timeout=3s
+core.transformation.interruption-timeout-delay=5s
 core.serializer.kryo.buffer-size=104857600
 
 core.transformer.actor.cluster-aware=true
