[improved][promena-core] Set default timeout to 10 minutes

--- a/base/promena-core/configuration/src/main/resources/application-promena.properties
+++ b/base/promena-core/configuration/src/main/resources/application-promena.properties
@@ -1,4 +1,4 @@
-core.transformation.timeout=3s
+core.transformation.timeout=10m
 core.transformation.interruption-timeout-delay=5s
 core.serializer.kryo.buffer-size=104857600
 
