[improved][promena-connector-activemq] Changed dependency from "javax.jms-api" to "jakarta.jms-api" (to be compatible with Spring Boot)

--- a/module/connector/activemq/pom.xml
+++ b/module/connector/activemq/pom.xml
@@ -55,7 +55,7 @@
     <properties>
         <promena-connector-activemq.version>1.0.0</promena-connector-activemq.version>
 
-        <javax.jms-api.version>2.0.1</javax.jms-api.version>
+        <jakarta.jms-api.version>2.0.3</jakarta.jms-api.version>
         <commons-math3.version>3.6.1</commons-math3.version>
 
         <testcontainers.version>1.12.3</testcontainers.version>
