--- a/module/connector/activemq/delivery/delivery-message-converter/pom.xml
+++ b/module/connector/activemq/delivery/delivery-message-converter/pom.xml
@@ -24,9 +24,9 @@
             <version>${spring-framework.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>javax.jms-api</artifactId>
-            <version>${javax.jms-api.version}</version>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
+            <version>${jakarta.jms-api.version}</version>
         </dependency>
     </dependencies>
 </project>
