[improved][promena-parent] Excluded "kryo-shaded" instead of "kryo" from "akka-kryo-serialization_2.12" dependency

--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -80,7 +80,7 @@
                 <exclusions>
                     <exclusion>
                         <groupId>com.esotericsoftware</groupId>
-                        <artifactId>kryo</artifactId>
+                        <artifactId>kryo-shaded</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>com.typesafe.akka</groupId>
