[added] Reference Documentation

--- a/base/promena-core/configuration/src/main/resources/application-promena.properties
+++ b/base/promena-core/configuration/src/main/resources/application-promena.properties
@@ -1,9 +1,18 @@
+# Maximum time to complete a transformation by transformer
 core.transformation.timeout=10m
+# Additional time after timeout for transformer to stop transformation
 core.transformation.interruption-timeout-delay=5s
+# Number of serializer actors. If not set, the number of serializer actors will be sum of transformer actors
+core.serializer.actors=
+# Maxium Kryo buffer size [bytes]
 core.serializer.kryo.buffer-size=104857600
 
+# Determines if transformation may be delegated to other transformer in cluster
 core.transformer.actor.cluster-aware=true
+# Determines if serialization may be delegated to other serializer in cluster
 core.serializer.actor.cluster-aware=false
 
+# If application uses external communication that isn't recognized by Promena, Promena will give a try to convert data using back-pressure communication
 communication.external.manager.back-pressure.enabled=true
+# Name of back-pressure communication
 communication.external.manager.back-pressure.id=memory
