--- a/module/actor-creator/adaptive-load-balancing/configuration/src/main/resources/module-actor-creator-adaptive-load-balancing.properties
+++ b/module/actor-creator/adaptive-load-balancing/configuration/src/main/resources/module-actor-creator-adaptive-load-balancing.properties
@@ -1,3 +1,4 @@
 akka.extensions.1000=akka.cluster.metrics.ClusterMetricsExtension
 
+# MetricsSelector to produce the probabilities, a.k.a. weights
 actor-creator.adaptive-load-balancing.metrics-selector=akka.cluster.metrics.MixMetricsSelector::getInstance
