--- a/module/cluster/management/kubernetes/configuration/src/main/resources/module-cluster-management-kubernetes.properties
+++ b/module/cluster/management/kubernetes/configuration/src/main/resources/module-cluster-management-kubernetes.properties
@@ -1,3 +1,4 @@
+# See https://doc.akka.io/docs/akka-management/1.0.5/akka-management.html, https://doc.akka.io/docs/akka-management/1.0.5/bootstrap/kubernetes-api.html and https://doc.akka.io/docs/akka-management/1.0.5/discovery/kubernetes.html for more details
 akka.remote.netty.tcp.hostname=${kubernetes.promena.pod.ip}
 
 akka.management.http.hostname=${kubernetes.promena.pod.ip}
@@ -12,6 +13,7 @@ akka.discovery.method=kubernetes-api
 akka.discovery.kubernetes-api.pod-namespace=${kubernetes.promena.namespace}
 akka.discovery.kubernetes-api.pod-label-selector=app=${kubernetes.promena.label.app}
 
+# See https://github.com/TanUkkii007/akka-cluster-custom-downing for more details
 akka.cluster.downing-provider-class=tanukki.akka.cluster.autodown.MajorityLeaderAutoDowning
 
 custom-downing.stable-after=10s
