--- a/base/promena-core/configuration/src/main/resources/application-akka.properties
+++ b/base/promena-core/configuration/src/main/resources/application-akka.properties
@@ -1,7 +1,5 @@
 akka.loggers.0=akka.event.slf4j.Slf4jLogger
 
-akka.actor.provider=cluster
-
 akka.actor.allow-java-serialization=off
 akka.actor.serialization-bindings."java.lang.Object"=java
 akka.actor.serializers.java=io.altoo.akka.serialization.kryo.KryoSerializer
@@ -9,6 +7,8 @@ akka-kryo-serialization.id-strategy=automatic
 akka-kryo-serialization.implicit-registration-logging=true
 akka-kryo-serialization.kryo-initializer=pl.beone.promena.core.configuration.external.akka.framework.serialization.AkkaAdditionalSerializersKryoInitializer
 
+# See https://doc.akka.io/docs/akka/2.5.26/cluster-usage.html for more details
+akka.actor.provider=cluster
 akka.remote.netty.tcp.hostname=127.0.0.1
 akka.remote.netty.tcp.port=2552
 akka.maximun-payload-size=${core.serializer.kryo.buffer-size}b
