[improved][promena-communication-file] Cosmetic changes in Reference Documentation

--- a/module/communication/file/internal/configuration/src/main/resources/module-communication-file-internal.properties
+++ b/module/communication/file/internal/configuration/src/main/resources/module-communication-file-internal.properties
@@ -1,2 +1,2 @@
-# The directory where data is persisted and shared across Promena nodes
+# Directory where data is persisted and shared across Promena nodes
 communication.file.internal.directory.path=/tmp
