[improved][promena-module-archetype] Renamed "internal" folder to "implementation" [improved][promena-module-archetype] Renamed "internal" module to "${artifactId}"

--- a/sdk/promena-module/promena-module-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-module/promena-module-archetype/src/main/resources/archetype-resources/pom.xml
@@ -11,11 +11,11 @@
     </parent>
 
     <groupId>${groupId}</groupId>
-    <artifactId>${artifactId}</artifactId>
+    <artifactId>${artifactId}-root</artifactId>
     <version>${version}</version>
 
     <modules>
-        <module>internal</module>
+        <module>implementation</module>
         <module>configuration</module>
     </modules>
     <packaging>pom</packaging>
