--- a/sdk/promena-module/promena-module-archetype/src/main/resources/archetype-resources/configuration/pom.xml
+++ b/sdk/promena-module/promena-module-archetype/src/main/resources/archetype-resources/configuration/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>${groupId}</groupId>
-        <artifactId>${rootArtifactId}</artifactId>
+        <artifactId>${rootArtifactId}-root</artifactId>
         <version>${version}</version>
     </parent>
 
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>${groupId}</groupId>
-            <artifactId>${rootArtifactId}-internal</artifactId>
+            <artifactId>${rootArtifactId}</artifactId>
             <version>${${rootArtifactId}.version}</version>
         </dependency>
 
