--- a/sdk/promena-module/promena-module-archetype/src/main/resources/archetype-resources/implementation/pom.xml
+++ b/sdk/promena-module/promena-module-archetype/src/main/resources/archetype-resources/implementation/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>${groupId}</groupId>
-        <artifactId>${rootArtifactId}</artifactId>
+        <artifactId>${rootArtifactId}-root</artifactId>
         <version>${version}</version>
     </parent>
 
