[improved][promena-cluster-management-kubernetes] New "akka-cluster-custom-downing" repository [improved][promena-cluster-management-kubernetes] Updated "akka-cluster-custom-downing" to version 0.0.13

--- a/module/cluster/management/kubernetes/configuration/pom.xml
+++ b/module/cluster/management/kubernetes/configuration/pom.xml
@@ -60,7 +60,7 @@
 
         <dependency>
             <groupId>com.github.TanUkkii007</groupId>
-            <artifactId>akka-cluster-custom-downing</artifactId>
+            <artifactId>akka-cluster-custom-downing_2.12</artifactId>
             <version>${akka-cluster-custom-downing.version}</version>
             <exclusions>
                 <exclusion>
